force-app/main/default/objects/Credentials__c/fields/Agentid__c.field-meta.xml
<CustomField>
    <fullName>Agentid__c</fullName>
    <label>Agentid</label>
    <length>25</length>
    <type>Text</type>
</CustomField>