force-app/main/default/objects/Credentials__c/fields/banerUrl__c.field-meta.xml
<CustomField>
    <fullName>banerUrl__c</fullName>
    <label>banerUrl</label>
    <type>Url</type>
</CustomField>