force-app/main/default/objects/Credentials__c/fields/Incoming_GID_del__c.field-meta.xml
<CustomField>
    <fullName>Incoming_GID_del__c</fullName>
    <label>Incoming GID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>