force-app/main/default/objects/Credentials__c/fields/Incoming_SID__c.field-meta.xml
<CustomField>
    <fullName>Incoming_SID__c</fullName>
    <label>Incoming SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>