force-app/main/default/objects/Credentials__c/fields/Outgoing_SID__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_SID__c</fullName>
    <label>Outgoing SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>