force-app/main/default/objects/Credentials__c/fields/Password_Polling__c.field-meta.xml
<CustomField>
    <fullName>Password_Polling__c</fullName>
    <label>Password Polling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>