force-app/main/default/objects/Credentials__c/fields/Slug_Polling__c.field-meta.xml
<CustomField>
    <fullName>Slug_Polling__c</fullName>
    <label>Slug Polling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>