force-app/main/default/objects/Credentials__c/fields/StatusPolling__c.field-meta.xml
<CustomField>
    <fullName>StatusPolling__c</fullName>
    <label>StatusPolling</label>
    <type>Url</type>
</CustomField>