force-app/main/default/objects/Credentials__c/fields/Token_Part1__c.field-meta.xml
<CustomField>
    <fullName>Token_Part1__c</fullName>
    <label>Token Part1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>