force-app/main/default/objects/Credentials__c/fields/Token_Part2__c.field-meta.xml
<CustomField>
    <fullName>Token_Part2__c</fullName>
    <label>Token Part2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>