force-app/main/default/objects/Credentials__c/fields/Token_Part3__c.field-meta.xml
<CustomField>
    <fullName>Token_Part3__c</fullName>
    <label>Token Part3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>