force-app/main/default/objects/Credentials__c/fields/Viadialog_Url__c.field-meta.xml
<CustomField>
    <fullName>Viadialog_Url__c</fullName>
    <label>Viadialog Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>